fix: checkbox overflow
- overflow was cut for label ellipses, unwantedly cutting checkbox
  animations and highlights

--- a/src/app/wlo-search/search/search-page/multivalue-checkbox/multivalue-checkbox.component.scss
+++ b/src/app/wlo-search/search/search-page/multivalue-checkbox/multivalue-checkbox.component.scss
@@ -2,7 +2,7 @@
     display: grid;
     > mat-checkbox {
         padding: 3px 4px;
-        overflow: hidden;
+        min-width: 0;
         span {
             &.label {
                 flex-grow: 1;
@@ -20,11 +20,15 @@
 }
 
 :host ::ng-deep mat-checkbox {
-    .mat-checkbox-layout,
+    .mat-checkbox-layout {
+        display: flex;
+        width: 100%;
+        align-items: center;
+    }
     .mat-checkbox-label {
         display: flex;
         width: 100%;
-        overflow: hidden;
+        min-width: 0;
         align-items: center;
     }
     .mat-checkbox-frame {
